Fixed issue with navbar on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -347,7 +347,7 @@ FORM.......................................1785
 						background: url(../img/logo-bg.png) top left no-repeat;
 						padding:5px 15px 12px 150px;
 						margin-left:-120px;
-						margin-right:30px;
+						margin-right:10px;
 						text-shadow: 0 1px 0 #000;
 						color: #fff;
 						display:inline-block;
